# conferences_api

./: .env.example  Makefile  README.md  app.py  pyproject.toml
conferences/: .env.example  app.py  websocket_part_example.txt
conferences/database/: database_repository.py
conferences/src/config/: .env  config.py  nginx.conf
conferences/src/crud/: create_conference.py  rest_controller.py
conferences/src/models/: conference.py
conferences/src/repository/: rest_controller.py
conferences/src/schema/: conference.py  delete_conference.py  update_conference_name.py  users.py
conferences/src/streaming/: conference_state_management.py  signal_server.py
conferences/test_doc/: RESTTest.postman_collection.json
docker/: Dockerfile  docker-compose.yml
technical_support_bot/: bot.py
